Mon Sep 13 11:47:13 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Logging_Service/Basic_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/Event_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/RTEvent_Logging_Service/Makefile.am:
	* orbsvcs/orbsvcs/Makefile.am:

	  Updated.

Mon Sep 13 06:40:36 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/RTEventLogAdmin.mpc:

	  Changed to inherit from dslogadmin_serv.

	* orbsvcs/orbsvcs/DsLogAdmin.mpc:

	  Changed to inherit from svc_utils.

Mon Sep 13 12:29:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * tao/orbsvcs/tests/AVStreams/Asynch_Three_Stage/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Bidirectional_Flows/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Component_Switching/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Full_Profile/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Modify_QoS/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Multicast/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Multicast_Full_Profile/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Multiple_Flows/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Pluggable/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Pluggable_Flow_Protocol/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Simple_Three_Stage/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Simple_Two_Stage/run_test.pl:
        * tao/orbsvcs/tests/AVStreams/Simple_Two_Stage_With_QoS/run_test.pl:

          Added generation of input datafiles to testscripts.
          All these scripts now generate an input file of ~100Kb when started,
          deleting the file when the test has finished.

Mon Sep 13 09:01:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/UShortSeqC.h:
          Explictly export the base template, to fix duplicate link errors
          when linking DsAdmin. This is a workaround for a bug in the vc7