@@ -1,3 +1,11 @@
+Mon Sep 13 12:06:20 2004  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* orbsvcs/orbsvcs/Time/TAO_Time_Service_Clerk.h:
+
+	  Remove #include of Naming_Server.h and unused method
+	  name_server() to avoid introducing a dependency on the naming
+	  service implementation on some windows systems.
+
 Mon Sep 13 11:47:13 2004  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* orbsvcs/Logging_Service/Basic_Logging_Service/Makefile.am:
